[package]
name = "teleprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive", "env"] }
defmt-decoder = { version = "0.3.6", features = ["unstable"] }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
object = "0.30.3"
probe-rs = "0.18.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
warp = "0.3"
parking_lot = "0.12"

[build-dependencies]
git-version = "0.3.5"

[profile.release]
debug = 2
