[package]
name = "teleprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.0"
bytes = "1.4.0"
clap = { version = "4.2.5", features = ["derive", "env"] }
defmt-decoder = { version = "0.3.6", features = ["unstable"] }
jsonwebtoken = "8.3.0"
log = "0.4.17"
object = "0.30.3"
probe-rs = { git = "https://github.com/probe-rs/probe-rs", rev = "a73fa49e782a0e9a3c4e0e58d5fd71ad3869a1a2" }
#probe-rs = { path = "./probe-rs/probe-rs" }
reqwest = { version = "0.11.17", default-features = false, features = [
    "json",
    "native-tls",
] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1", default-features = false, features = [] }
url = "2.3.1"
warp = { version = "0.3", default-features = false }
parking_lot = "0.12"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
once_cell = "1.17.1"
pin-project-lite = "0.2.9"
backtrace = "0.3.67"

[build-dependencies]
git-version = "0.3.5"

[profile.release]
debug = 2
